# LFA

./: .gitignore  README.md
Lab1/: CMakeLists.txt  LAB2.md  README.md  main.cpp
Lab1/include/: finiteAutomaton.cpp  finiteAutomaton.h  grammar.cpp  grammar.h
Lab3/: REPORT.md  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sample.txt  test.lex  token.h
Lab3/tests/: test1.lex  test2.lex  test3.lex  test4.lex
Lab4/: CMakeLists.txt  README.md  main.cpp
Lab4/include/: lexer.h  nodes.h  parser.h  token.h
Lab4/src/: lexer.cpp  nodes.cpp  parser.cpp
Lab5/: CMakeLists.txt  main.cpp  report.md
Lab5/include/: grammar.h
Lab5/src/: grammar.cpp
